fix: #50 increases title spacing to logo

--- a/src/features/welcome/welcome-page.module.scss
+++ b/src/features/welcome/welcome-page.module.scss
@@ -187,7 +187,7 @@
         }
 
         .intro {
-            margin: 0 1.25rem 5rem 1.25rem;
+            margin: 2rem 1.25rem 5rem 1.25rem;
 
             img {
                 margin: 0 auto;
